se arreglan links de imagenes y paginas

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
             </div>
             <div class="top">
                 <div class="logIn icon">
-                    <img src="assets/imagenes/login.png" alt="">
+                    <img src="Assets/imagenes/login.png" alt="login">
                 </div>
                 <div class="logo">
-                    <a class="logo_central" ><img src="assets/imagenes/minipipo_icon.png" alt=""</></a>            
+                    <a class="logo_central" ><img src="Assets/imagenes/minipipo_icon.png" alt="icono"></a>            
                 </div>
                 <div class="shop icon">
-                    <img src="assets/imagenes/favoritos.png" alt="">
-                    <img src="assets/imagenes/carrito.png" alt=""> 
+                    <img src="Assets/imagenes/favoritos.png" alt="favoritos">
+                    <img src="Assets/imagenes/carrito.png" alt="carrito"> 
                 </div>
             </div>
             <div class="menu_principal">
@@ -54,20 +54,20 @@
     <!-- -->
         <main>
             <div class="inicio" > 
-                <div ><a href="Views/productos_beba.html"><img class="imgIzq" src="assets/imagenes/bebemodelo.jpg" alt="imagenen_beba" width="450px" height="500px"/></a></div>
+                <div ><a href="Views/productos_beba.html"><img class="imgIzq" src="Assets/imagenes/bebemodelo.jpg" alt="imagen_beba" width="450px" height="500px"/></a></div>
                 
-                <a href="Views/productos_bebe.html"><img class="imgCenter" src="assets/imagenes/niña__modelo.jpg" alt="imagen_bebe" width="450px" height="500px"/></a>
-                <a href=""><img class="imgDer" src="assets/imagenes/niño__modelo.jpg" alt="imagen_bebe" width="450px" height="500px"/></a>
+                <a href="Views/productos_bebe.html"><img class="imgCenter" src="Assets/imagenes/niña__modelo.jpg" alt="imagen_bebe" width="450px" height="500px"/></a>
+                <a href=""><img class="imgDer" src="Assets/imagenes/niño__modelo.jpg" alt="imagen_bebe" width="450px" height="500px"/></a>
             </div>
                 <div class="grids">
                     <div class="infIzq">
-                        <img src="assets/imagenes/tarjeta__icon.png" alt="pago_tarjeta" class="circular">
+                        <img src="Assets/imagenes/tarjeta__icon.png" alt="pago_tarjeta" class="circular">
                     </div>
                     <div class="infCenter">
                         <img src="Assets/imagenes/store__icon.png" alt="comprar_en_tienda" class="circular">
                     </div>
                     <div class="infDer">
-                        <img src="assets/imagenes/delibery__icon.png" alt="delibery" class="circular">
+                        <img src="Assets/imagenes/delibery__icon.png" alt="delibery" class="circular">
                     </div>
                     <div class="info1" data-aos="flip-left"
                     data-aos-easing="ease-out-cubic"
@@ -79,13 +79,13 @@
                     data-aos-easing="ease-out-cubic"
                     data-aos-duration="2000">
                         <h4>Podés acercarte a nuestra tienda</h4>
-                        <p>De lunes a sabados de 10hs a 19hs</p>
+                        <p>de lunes a sabados de 10hs a 19hs</p>
                     </div>
                     <div class="info3" data-aos="flip-left"
                     data-aos-easing="ease-out-cubic"
                     data-aos-duration="2000">
                         <h4>Envíos sin cargo</h4>
-                        <p>Con compras superiores a $8000. </p>
+                        <p>Con compras superiores a $8000.</p>
                     </div>
                 </div>
             </div>
@@ -106,13 +106,13 @@
             </div>
             <div class="grids_foo">
                     <div class="icon envios">
-                        <a href="views/envios.html"><img src="assets/imagenes/envios_icon.png" alt=""></a>
+                        <a href="Views/envios.html"><img src="Assets/imagenes/envios_icon.png" alt="envios_icon"></a>
                     </div>
                     <div class="icon devoluciones">
-                        <a href="views/cambios_y_devoluciones.html"><img src="assets/imagenes/devolucion.png" alt=""></a>
+                        <a href="Views/cambios_y_devoluciones.html"><img src="Assets/imagenes/devolucion.png" alt="cambios_y_devoluciones"></a>
                     </div>
                     <div class="icon rrss ">
-                        <a target="_blank" href="https://www.instagram.com/minipipo.kids/"><img src="assets/imagenes/rs_ig.png" alt="instagram/minipipo"/></a>
+                        <a target="_blank" href="https://www.instagram.com/minipipo.kids/"><img src="Assets/imagenes/rs_ig.png" alt="instagram/minipipo"/></a>
                         <a target="_blank" href="https://www.facebook.com/minipipo.kids/"><img src="Assets/imagenes/rs_fb.png" alt="facebook/minipipo" /></a>
                     </div>
                     <div class="envios_text">
